# macscraper

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  release.sh  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-31-macscraper.md
docs/superpowers/specs/: 2026-03-31-macscraper-design.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  download.rs  fonts.rs  image.rs  lib.rs  llm.rs  main.rs  scraper.rs  store.rs  types.rs
src/lib/: fonts.test.ts  fonts.ts  template.test.ts  template.ts  types.ts
src/lib/canvas/: renderer.test.ts  renderer.ts
src/lib/components/: CardCanvas.svelte  ContentSection.svelte  ImagePicker.svelte  PreviewPanel.svelte  SettingsModal.svelte  StyleSection.svelte  SummarySection.svelte  UrlBar.svelte
src/lib/stores/: config.ts  editor.ts  scrape.ts
