[package]
name = "macscraper"
version = "0.1.0"
edition = "2021"

[lib]
name = "macscraper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-store = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
reqwest            = { version = "0.13", features = ["json", "rustls"], default-features = false }
scraper            = "0.26"
async-openai       = { version = "0.34", default-features = false, features = ["chat-completion"] }
toml               = "0.8"
base64             = { version = "0.22", features = ["std"] }
keyring            = "2"
tauri-plugin-dialog = "2.6.0"
